--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
             <a href="https://github.com/KevinZonda/K-lang">GitHub</a>
         </div>
 
+        <div class="project" onclick="window.open('https://lambda.kevinzonda.com/', '_blank')">
+            <img src="https://lambda.kevinzonda.com/lambda.png" alt="Lambda" class="project-image">
+            <h3>Lambda λ</h3>
+            <p>A modern serverless engine behind KevinZonda Sigma (a managed serverless platform). Powers FaaS upon KevinZonda Fibre.</p>
+            <a href="https://lambda.kevinzonda.com/">Website</a>
+            <a href="https://github.com/KevinZonda/Lambda">GitHub</a>
+        </div>
+
         <div class="project" onclick="window.open('https://github.com/KVRes/PanoptoAnalyser', '_blank')">
             <h3>PanoptoAnalyser <span style="font-size: 14px; color: #888;">(Component of LearningSuite, Dualize AI)</span></h3>
             <p>A tool that analyses Panopto videos and generates an organised lecture notes.</p>
