--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
             <a href="https://github.com/KVRes/TensorCore">GitHub</a>
         </div>
 
+        <div class="project" onclick="window.open('https://github.com/KVRes/Piccadilly', '_blank')">
+            <img src="./projects/piccadility.png" alt="Piccadilly" class="project-image">
+            <h3>Piccadilly KV (PKV)</h3>
+            <p>PiccadillyKV (PKV) is an event-driven high-performance key-value database.</p>
+            <p style="color: #888;">(Only Available to KevinZonda Ring)</p>
+            <a href="https://github.com/KVRes/Piccadilly">GitHub</a>
+        </div>
+
         <div class="project" onclick="window.open('https://github.com/KVRes/SimpleMR', '_blank')">
             <img src="https://github.com/KVRes/SimpleMR/blob/main/img/SimpleMR.png?raw=true" alt="SimpleMapReduce" class="project-image">
             <h3>SimpleMR</h3>
